--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "multiplayergame",
   "version": "1.0.0",
   "description": "",
+  "engines": {
+    "node": "12.x"
+  },
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
@@ -12,7 +15,6 @@
     "argon2": "^0.25.1",
     "express": "^4.16.4",
     "joi": "^14.3.1",
-    "mongodb": "^3.4.1",
     "pg": "^8.5.1",
     "ws": "^6.1.0"
   },
